Fix styling to support both dark mode and light mode.

--- a/peerprep_fe/src/styles/globals.css
+++ b/peerprep_fe/src/styles/globals.css
@@ -5,16 +5,14 @@
 @tailwind utilities;
 
 :root {
+  --background: #ededed;
+  --foreground: #0a0a0a;
+}
+
+:root.dark {
   --background: #0a0a0a;
   --foreground: #ededed;
 }
-
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-} */
 
 body {
   color: var(--foreground);
